tests/fixtures/invalid/pow_float_str_dict.py
# Cannot call pow() with Float, Str, Dict[str, int]
x = pow(1.0, "hello", {"a": 1})
